nextcloud/photoprism/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  namespace: photoprism
  labels:
    app: photoprism
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: web
  selector:
    app: photoprism
